# Exercism

./: .gitignore  README.md
ocaml/: Makefile
ocaml/acronym/: acronym.ml  dune
ocaml/allergies/: allergies.ml
ocaml/anagram/: anagram.ml
ocaml/binary-search-tree/: binary_search_tree.ml  test.ml
ocaml/difference-of-squares/: difference_of_squares.ml
ocaml/hamming/: dune  hamming.ml
ocaml/hello-world/: hello_world.ml
ocaml/nucleotide-count/: nucleotide_count.ml  test.ml
ocaml/raindrops/: raindrops.ml  raindrops.mli  raindrops.opam
ocaml/rna-transcription/: rna_transcription.ml
